--- a/css/style.css
+++ b/css/style.css
@@ -1271,7 +1271,7 @@ h6 {
   left: 10px;
   right: 10px;
   content: "";
-  background: #f4f3e2;
+  background: #eae2f4;
   z-index: -1;
 }
 .wedding-events .desc h3 {
@@ -2265,21 +2265,6 @@ a.floating-btn {
 /*# sourceMappingURL=style.css.map */
 
 .button-menu {
-  /* position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 999;
-  border-top: 1px solid #ddd;
-  background-color: rgb(56, 13, 13);
-  box-shadow: rgb(0 0 0, 0.2) 0px 0px 3px 0px;
-  overflow-x: auto;
-  /* display: none; */
-  /* font-style: normal !important;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center; */
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -2289,6 +2274,12 @@ a.floating-btn {
   display: flex;
   overflow-x: auto;
   z-index: 999;
+}
+
+.button-menu-item {
+  width: 100%;
+  height: 60px;
+  display: flex;
 }
 .nav__link {
   display: flex;
@@ -2310,15 +2301,6 @@ a.floating-btn {
   background-color: #eeeeee;
 }
 
-/* .nav__link--active {
-  color: #009578;
-} */
-
 .nav__icon {
   font-size: 18px;
-}
-.button-menu-item {
-  width: 100%;
-  height: 60px;
-  display: flex;
 }
