--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,7 @@ h6 {
 #bootstrap-story,
 #bootstrap-people,
 #bootstrap-when-where,
+#bootstrap-when-where1,
 #bootstrap-started,
 #bootstrap-gallery,
 #bootstrap-testimonials,
@@ -324,6 +325,7 @@ h6 {
   #bootstrap-story,
   #bootstrap-people,
   #bootstrap-when-where,
+  #bootstrap-when-where1,
   #bootstrap-started,
   #bootstrap-gallery,
   #bootstrap-testimonials,
@@ -1272,7 +1274,7 @@ h6 {
   left: 10px;
   right: 10px;
   content: "";
-  background: #f4f3e2;
+  background: #cfcfcf;
   z-index: -1;
 }
 .wedding-events .desc h3 {
@@ -1859,6 +1861,7 @@ h6 {
   height: 100%;
   z-index: 2000;
   background-repeat: cover;
+  /* background-image:url(images/) ; */
 }
 
 #pembuka .container {
@@ -1871,8 +1874,9 @@ h6 {
 .container .box {
   position: fixed;
   height: 40%;
-  width: 80%;
+  width: 50%;
   background-color: rgba(109, 98, 98, 0.5);
+  border-radius: 10px;
 }
 .box .id {
   align-items: center;
@@ -1888,17 +1892,23 @@ h6 {
   .box a {
     background-color: #5e5a55;
     color: white;
-    font-size: 18px;
+    font-size: 12px;
     align-items: center;
     margin-bottom: 20px;
     /* width: 30%; */
     height: 100%;
   }
+  .container .box {
+    position: fixed;
+    height: 40%;
+    width: 60%;
+    background-color: rgba(109, 98, 98, 0.5);
+  }
 }
 
 .id h1 {
   color: #fff;
-  font-size: 40px;
+  font-size: 35px;
   text-align: center;
   margin: 10px 10px;
 }
@@ -1925,7 +1935,7 @@ h6 {
 .box a {
   background-color: #5e5a55;
   color: white;
-  font-size: 18px;
+  font-size: 12px;
   align-items: center;
   margin-bottom: 20px;
   /* width: 30%; */
@@ -2095,6 +2105,13 @@ h6 {
     margin: 0 20px;
     text-align: center;
   }
+
+  .wedding-events .desc h3 {
+    font-size: 24px;
+    color: #5e5a55;
+    display: block;
+    margin-bottom: 20px;
+  }
 }
 
 .fh5co-heading .ayat {
@@ -2152,6 +2169,11 @@ h6 {
     font-size: 14px;
     font-weight: 400;
     color: #fff;
+  }
+
+  .wedding-events .desc p {
+    font-size: 16px;
+    margin-bottom: 10px;
   }
 }
 
@@ -2242,6 +2264,7 @@ a .button {
 a.floating-btn {
   width: 52px;
   height: 52px;
+  padding: 10px;
   padding: 10x 0px 0px 1px !important;
   background: #5e5a55;
   text-decoration: none;
@@ -2270,7 +2293,7 @@ a.floating-btn {
 
 .covid-box {
   padding: 2em 0;
-  background: #f2f2f2;
+  background: #cfcfcf;
 }
 .covid-box .full-flex {
   width: 100%;
@@ -2393,4 +2416,17 @@ a.floating-btn {
   width: 100%;
   height: 60px;
   display: flex;
+}
+.google-maps {
+  position: relative;
+  padding-bottom: 75%;
+  height: 0;
+  overflow: hidden;
+}
+.google-maps iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
 }
